--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
           <div class="col-lg-7 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
-          		<h1 class="logo"><a href="index.html"><span class="flaticon-camera-shutter"></span>Snapshot<small>Photographer / San Francisco</small></a></h1>
-		  				<h1 class="mb-4">We Make <br>Something Great</h1>
+          		<h1 class="logo"><a href="index.html"><span class="flaticon-camera-shutter"></span>Snapshot<small>Photographer / Melbourne</small></a></h1>
+		  				<h1 class="mb-4">Capture <br>Par Hera</h1>
 		  				<p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts.</p>
 		  				<p class="mt-5"><a href="#" class="btn-custom">Contact us <span class="ion-ios-arrow-round-forward"></span></a></p>
             </div>
@@ -266,8 +266,8 @@
 		  <div class="container-fluid px-md-0">
         <div class="row no-gutters">
           <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/model-1.jpg);">
-            	<a href="images/model-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/IMG_9234.jpg)">
+            	<a href="images/IMG_9234.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -333,7 +333,7 @@
           </div>
           <div class="col-md-4 ftco-animate">
             <div class="model img d-flex align-items-end" style="background-image: url(images/model-6.jpg);">
-            	<a href="images/model-6.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            	<a href="./IMG_9234.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
