--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
           <div class="col-lg-7 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
-          		<h1 class="logo"><a href="index.html"><span class="flaticon-camera-shutter"></span>Snapshot<small>Photographer / Melbourne</small></a></h1>
+          		<h1 class="logo"><a href="index.html"><span class="flaticon-camera-shutter"></span>Mehyar Belal<small>Photographer / Melbourne</small></a></h1>
 		  				<h1 class="mb-4">Capture <br>Par Hera</h1>
 		  				<p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts.</p>
 		  				<p class="mt-5"><a href="#" class="btn-custom">Contact us <span class="ion-ios-arrow-round-forward"></span></a></p>
@@ -279,8 +279,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/model-2.jpg);">
-            	<a href="images/model-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/IMG_8995\ vvvv.jpg);">
+            	<a href="images/IMG_8995 vvvv.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -292,8 +292,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/model-3.jpg);">
-            	<a href="images/model-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/IMG_9236.jpg);">
+            	<a href="images/IMG_9236.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -306,8 +306,8 @@
           </div>
 
           <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/model-4.jpg);">
-            	<a href="images/model-4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/IMG_9261cccc.jpg);">
+            	<a href="images/IMG_9261cccc.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
