--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
           <div class="col-lg-7 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
           		<h1 class="logo"><a href="index.html"><span class="flaticon-camera-shutter"></span>Mehyar Belal<small>Photographer / Melbourne</small></a></h1>
-		  				<h1 class="mb-4">Capture <br>Par Hera</h1>
-		  				<p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts.</p>
+		  				<h1 class="mb-4">Street Stories <br>by Mehyar Belal</h1>
+		  				<p class="mb-4">I capture the real, unscripted beauty of everyday life — from Melbourne streets to candid portraits.</p>
 		  				<p class="mt-5"><a href="#" class="btn-custom">Contact us <span class="ion-ios-arrow-round-forward"></span></a></p>
             </div>
           </div>
@@ -104,8 +104,8 @@
     			</div>
     			<div class="col-md-6 col-lg-6 pl-md-5">
 	          <div class="heading-section ftco-animate">
-	            <h2 class="mb-4">Snapshot is A Creative Direction, <br>Photography Agency</h2>
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+	            <h2 class="mb-4">About Me<br>Mehyar Belal</h2>
+	            <p>I'm a Melbourne-based photographer focused on street, portrait, and candid photography. I love capturing the quiet, emotional moments that tell a story. Whether it's a face in motion or an empty alley glowing with light, my camera is always ready.</p>
 
 	            <div class="counter-wrap ftco-animate d-flex my-md-4">
 	              <div class="text">
@@ -146,8 +146,8 @@
 		        		<div class="media block-6 services d-block ftco-animate">
 		              <div class="icon"><span class="flaticon-video-camera"></span></div>
 		              <div class="media-body">
-		                <h3 class="heading mb-3">Movies &amp; Advertising Videos</h3>
-		                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences.</p>
+		                <h3 class="heading mb-3">Street Portraits</h3>
+		                <p>1-hour sessions in Melbourne CBD</p>
 		              </div>
 		            </div> 
 		        	</div>
@@ -155,8 +155,8 @@
 		        		<div class="media block-6 services d-block ftco-animate">
 		              <div class="icon"><span class="flaticon-video-player"></span></div>
 		              <div class="media-body">
-		                <h3 class="heading mb-3">Clip &amp; Music Videos</h3>
-		                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences.</p>
+		                <h3 class="heading mb-3">Event Coverage</h3>
+		                <p>irthday parties, festivals, and pop-ups</p>
 		              </div>
 		            </div> 
 		        	</div>
@@ -164,8 +164,8 @@
 		        		<div class="media block-6 services d-block ftco-animate">
 		              <div class="icon"><span class="flaticon-video-player-1"></span></div>
 		              <div class="media-body">
-		                <h3 class="heading mb-3">Short Film Productions</h3>
-		                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences.</p>
+		                <h3 class="heading mb-3">Personal Branding</h3>
+		                <p>LinkedIn photos, lifestyle shots for websites.</p>
 		              </div>
 		            </div> 
 		        	</div>
