--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 		            <div class="img img-about-2 ml-2" style="background-image: url(images/about-3.jpg);"></div>
 		          </div>
 		          <blockquote class="blockquote mt-5">
-		          	<p class="mb-2">"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.."</p>
-		          	<span>&mdash; Lucy Lee</span>
+		          	<p class="mb-2">"Mehyar made the shoot feel relaxed and fun. The photos captured more than just a moment - they captured emotion.."</p>
+		          	<span>&mdash;- Aisha H., Portrait Client</span>
 		          </blockquote>
 	          </div>
 	        </div>
@@ -619,7 +619,8 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+ © 2025 Mehyar Belal | Built & captured with passion
+
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 
 					  <ul class="ftco-footer-social p-0">
