--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<!-- End Nav Section -->
 
 		<!-- Start Home Section -->
-		<section id="home" class="hero-wrap js-fullheight" style="background-image: url(images/bg-1.jpg);" data-stellar-background-ratio="0.5">
+		<section id="home" class="hero-wrap js-fullheight" style="background-image: url('https://images.unsplash.com/photo-1494236472818-d35e50e604cf?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
@@ -78,8 +78,9 @@
           		<h1 class="logo"><a href="index.html"><span class="flaticon-camera-shutter"></span>Mehyar Belal<small>Photographer / Melbourne</small></a></h1>
 		  				<h1 class="mb-4">Street Stories <br>by Mehyar Belal</h1>
 		  				<p class="mb-4">I capture the real, unscripted beauty of everyday life — from Melbourne streets to candid portraits.</p>
-		  				<p class="mt-5"><a href="#" class="btn-custom">Contact us <span class="ion-ios-arrow-round-forward"></span></a></p>
-            </div>
+<p class="mt-5">
+  <a href="#contact" class="btn-custom">Book a Shoot <span class="ion-ios-arrow-round-forward"></span></a>
+</p>            </div>
           </div>
         </div>
       </div>
