--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 	              </div>
 		          </div>
 		          <div class="d-flex w-100">
-		            <div class="img img-about-2 mr-2" style="background-image: url(images/about.jpg);"></div>
-		            <div class="img img-about-2 ml-2" style="background-image: url(images/about-3.jpg);"></div>
+		            <div class="img img-about-2 mr-2" style="background-image: url(images/IMG_9234.jpg);"></div>
+		            <div class="img img-about-2 ml-2" style="background-image: url(images/IMG_9236.jpg);"></div>
 		          </div>
 		          <blockquote class="blockquote mt-5">
 		          	<p class="mb-2">"Mehyar made the shoot feel relaxed and fun. The photos captured more than just a moment - they captured emotion.."</p>
