--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
           <div class="col-lg-7 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
-          		<h1 class="logo"><a href="index.html"><span class="flaticon-camera-shutter"></span>Mehyar Belal<small>Photographer / Melbourne</small></a></h1>
+          		<h1 class="logo"><a href="index.html">Mehyar Belal<small>Photographer / Melbourne</small></a></h1>
 		  				<h1 class="mb-4">Street Stories <br>by Mehyar Belal</h1>
 		  				<p class="mb-4">I capture the real, unscripted beauty of everyday life — from Melbourne streets to candid portraits.</p>
 <p class="mt-5">
