--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Snapshot - Free Bootstrap 4 Template by Colorlib</title>
+<title>Mehyar Belal | Photographer – Melbourne</title>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -28,6 +29,8 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+	<link rel="icon" href="/images/ChatGPT Image May 1, 2025, 06_13_34 PM.png" type="image/x-icon">
+
   </head>
   <body>
 
