--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/model-5.jpg);">
-            	<a href="images/model-5.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/IMG_9618.jpg);">
+            	<a href="images/IMG_9618.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -334,48 +334,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/model-6.jpg);">
-            	<a href="./IMG_9234.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
-	    				</a>
-            	<div class="desc w-100 px-4">
-	              <div class="text w-100 mb-3">
-	              	<span>Nature</span>
-	              	<h2><a href="work-single.html">Beautiful Work</a></h2>
-	              </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/model-7.jpg);">
-            	<a href="images/model-7.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
-	    				</a>
-            	<div class="desc w-100 px-4">
-	              <div class="text w-100 mb-3">
-	              	<span>Nature</span>
-	              	<h2><a href="work-single.html">Beautiful Work</a></h2>
-	              </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/model-8.jpg);">
-            	<a href="images/model-8.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
-	    				</a>
-            	<div class="desc w-100 px-4">
-	              <div class="text w-100 mb-3">
-	              	<span>Nature</span>
-	              	<h2><a href="work-single.html">Beautiful Work</a></h2>
-	              </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/model-9.jpg);">
-            	<a href="images/model-9.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/IMG_9684.jpg);">
+            	<a href="./images/IMG_9684.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -388,8 +348,48 @@
           </div>
 
           <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/model-10.jpg);">
-            	<a href="images/model-10.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/IMG_9739.jpg);">
+            	<a href="images/IMG_9739.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+	    					<span class="icon-expand"></span>
+	    				</a>
+            	<div class="desc w-100 px-4">
+	              <div class="text w-100 mb-3">
+	              	<span>Nature</span>
+	              	<h2><a href="work-single.html">Beautiful Work</a></h2>
+	              </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 ftco-animate">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/IMG_9739.jpg);">
+            	<a href="images/IMG_9739.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+	    					<span class="icon-expand"></span>
+	    				</a>
+            	<div class="desc w-100 px-4">
+	              <div class="text w-100 mb-3">
+	              	<span>Nature</span>
+	              	<h2><a href="work-single.html">Beautiful Work</a></h2>
+	              </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 ftco-animate">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/IMG_9755.jpg);">
+            	<a href="images/IMG_9743.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+	    					<span class="icon-expand"></span>
+	    				</a>
+            	<div class="desc w-100 px-4">
+	              <div class="text w-100 mb-3">
+	              	<span>Nature</span>
+	              	<h2><a href="work-single.html">Beautiful Work</a></h2>
+	              </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 ftco-animate">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/IMG_9755.jpg);">
+            	<a href="images/IMG_9755.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
