--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 		  			<div class="row">
 				  		<div class="col-md-5 heading-section ftco-animate pb-5">
 		            <h2 class="mb-4">Photography Services</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
+		            <p>Each photo session is tailored to bring out authenticity — whether in motion, expression, or silence. I shoot on-location across Melbourne.</p>
 		          </div>
 				  	</div>
 		  			<div class="row">
@@ -158,7 +158,7 @@
 		              <div class="icon"><span class="flaticon-video-player"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Event Coverage</h3>
-		                <p>irthday parties, festivals, and pop-ups</p>
+		                <p>Birthday parties, festivals, and pop-ups</p>
 		              </div>
 		            </div> 
 		        	</div>
@@ -261,7 +261,7 @@
 		  	<div class="row justify-content-center">
 		  		<div class="col-md-4 heading-section text-center ftco-animate pb-5">
             <h2 class="mb-4">Selected Projects</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
+            <p>A curated collection of moments captured across Melbourne — raw, unposed, and honest.</p>
           </div>
 		  	</div>
 		  </div> 
@@ -535,7 +535,7 @@
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-4 heading-section text-center ftco-animate">
             <h2 class="mb-4">Contact Me</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
+            <p>Let’s work together. Whether it’s a shoot, event, or creative collaboration — I’m open to hearing your ideas.</p>
           </div>
         </div>
 
@@ -547,7 +547,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Address</h3>
-		            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+		            <p>Melbourne, VIC — available for sessions across the city and suburbs</p>
 		          </div>
 	          </div>
           </div>
@@ -558,7 +558,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Contact Number</h3>
-		            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+		            <p><a href="tel://1234567920">+61 412621519</a></p>
 	            </div>
 	          </div>
           </div>
@@ -569,7 +569,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Email Address</h3>
-		            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+		            <p><a href="mehyarbelal@hotmail.com">mehyarbelal@hotmail.com</a></p>
 		          </div>
 	          </div>
           </div>
@@ -580,7 +580,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Website</h3>
-		            <p><a href="#">yoursite.com</a></p>
+		            <p><a href="#">TBH - 2025 June</a></p>
 	            </div>
 	          </div>
           </div>
@@ -658,5 +658,26 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
+
+
+	<script>
+  function initMap() {
+  var melbourne = { lat: -37.8136, lng: 144.9631 };
+  var map = new google.maps.Map(document.getElementById("map"), {
+    zoom: 13,
+    center: melbourne,
+  });
+
+  new google.maps.Marker({
+    position: melbourne,
+    map: map,
+    title: "Mehyar Belal Photography"
+  });
+}
+
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9ZnrPDEFBPt5UXF9YltxBb82Fny-E288&callback=initMap" async defer></script>
+
   </body>
 </html>
