--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 		</section>
 		<!-- End Project Section -->
 
-		<section class="ftco-section testimony-section" id="testimonial">
+		<section class="ftco-section testimony-section" id="testimonial" style="display:none;">
 			<div class="container">
 				<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-4 heading-section ftco-animate">
