--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
-	<link rel="icon" href="/images/ChatGPT Image May 1, 2025, 06_13_34 PM.png" type="image/x-icon">
+	<link rel="icon" href="./images/assets/f671aeef-0abf-4db1-ac6f-e89a703ee752.png" type="image/x-icon">
 
   </head>
   <body>
@@ -72,14 +72,22 @@
 		<!-- End Nav Section -->
 
 		<!-- Start Home Section -->
-		<section id="home" class="hero-wrap js-fullheight" style="background-image: url('https://images.unsplash.com/photo-1494236472818-d35e50e604cf?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');" data-stellar-background-ratio="0.5">
+		<section id="home" class="hero-wrap js-fullheight" style="background-image: url('https://images.pexels.com/photos/1293120/pexels-photo-1293120.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
+
+		
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
           <div class="col-lg-7 ftco-animate d-flex align-items-center">
+
+			
           	<div class="text text-center">
+
+				  <img src="./images/assets/Logo white.png" width="80px" height="80px" alt="Logo" style="  display: block;
+  margin: 0 auto 10px;">
+
           		<h1 class="logo"><a href="index.html">Mehyar Belal<small>Photographer / Melbourne</small></a></h1>
-		  				<h1 class="mb-4">Street Stories <br>by Mehyar Belal</h1>
+		  				<h1 class="mb-4">Captured <br>by Mehyar Belal</h1>
 		  				<p class="mb-4">Capturing unscripted beauty in motion — from Melbourne’s streets to its quiet corners.
 </p>
 <p class="mt-5">
@@ -245,7 +253,8 @@ Whether it’s a fleeting glance or a city alley glowing at dusk, I chase the mo
 
 					    <div class="p-md-4 mt-4">
 					    	<div class="col-md-8 ftco-animate">
-						    	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast.</p>
+						    	<p>Every image goes through a thoughtful process — from pre-visualizing the scene to refining the final edit. It's not just photography; it's storytelling.
+</p>
 					    	</div>
 					    </div>
 					  </div>
