--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 		</nav>
 		<!-- End Nav Section -->
 
+
+		<style>.overlay {
+  background: transparent !important;
+}</style>
 		<!-- Start Home Section -->
 		<section id="home" class="hero-wrap js-fullheight" style="background-image: url('https://images.pexels.com/photos/1293120/pexels-photo-1293120.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
