--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ Whether it’s a fleeting glance or a city alley glowing at dusk, I chase the mo
 					  </div>
 					</div>
 					<div class="col-md-5 d-flex align-items-stretch">
-	        	<div class="img w-100" style="background-image: url(images/about-2.jpg);"></div>
+	        	<div class="img w-100" style="background-image: url(images/about-2.png);"></div>
 	        </div>
 		  	</div>
 		  </div>
