--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
   </head>
   <body>
 
+	<style>
+		.hero-wrap {
+  background-position: center center !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+}
+	</style>
 
   	<nav id="navbar" class="navbar">
 		  <ul class="nav-menu">
@@ -76,7 +83,7 @@
   background: transparent !important;
 }</style>
 		<!-- Start Home Section -->
-		<section id="home" class="hero-wrap js-fullheight" style="background-image: url('https://images.pexels.com/photos/1293120/pexels-photo-1293120.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');" data-stellar-background-ratio="0.5">
+		<section id="home" class="hero-wrap js-fullheight" style="background-image: url('./images/assets/IMG_0116mmmmmmmmmmmmmmmmm.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
 
