--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@
   <body>
 
 	<style>
-		.hero-wrap {
-  background-position: center center !important;
-  background-size: cover !important;
-  background-repeat: no-repeat !important;
+.hero-wrap {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 40%;
+  min-height: 120vh;
 }
+
+
+
+
 	</style>
 
   	<nav id="navbar" class="navbar">
@@ -83,7 +88,8 @@
   background: transparent !important;
 }</style>
 		<!-- Start Home Section -->
-		<section id="home" class="hero-wrap js-fullheight" style="background-image: url('./images/assets/IMG_0116mmmmmmmmmmmmmmmmm.jpg');" data-stellar-background-ratio="0.5">
+		<section id="home" class="hero-wrap js-fullheight" style="background-image: url('./images/assets/IMG_0116mmmmmmmmmmmmmmmmm.jpg');" data-stellar-background-ratio="0.8" 
+         data-stellar-background-position="60% 50%">
       <div class="overlay"></div>
       <div class="container">
 
@@ -117,7 +123,7 @@
     			<div class="col-md-6 col-lg-6 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img img-video d-flex align-self-stretch align-items-center" style="background-image:url(images/IMG_963422.jpg);">
+	    				<div class="img img-video d-flex align-self-stretch align-items-center" style="background-image:url(images/IMG_963422.jpg);" >
 	    					<div class="video justify-content-center">
 									
 								</div>
@@ -652,6 +658,19 @@ Whether it’s a fleeting glance or a city alley glowing at dusk, I chase the mo
 
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9ZnrPDEFBPt5UXF9YltxBb82Fny-E288&callback=initMap" async defer></script>
+
+
+
+<script>
+  $(document).ready(function(){
+    $.stellar({
+      responsive: true,
+      horizontalScrolling: false,
+      parallaxBackgrounds: true,
+    });
+  });
+</script>
+
 
   </body>
 </html>
