--- a/index.html
+++ b/index.html
@@ -297,40 +297,40 @@ Whether it’s a fleeting glance or a city alley glowing at dusk, I chase the mo
 		  <div class="container-fluid px-md-0">
         <div class="row no-gutters">
           <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/IMG_9234.jpg)">
-            	<a href="images/IMG_9234.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="model img d-flex align-items-end" style="background-image: url(./images/assets/IMG_mmmm.jpg)">
+            	<a href="./images/assets/IMG_mmmm.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>City</span>
-	              	<h2><a href="work-single.html">City Buildings</a></h2>
+	              	<span>Melbourne</span>
+	              	<h2><a href="work-single.html">Park</a></h2>
 	              </div>
               </div>
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/IMG_8995\ vvvv.jpg);">
-            	<a href="images/IMG_8995 vvvv.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/assets/IMG_0109\ -\ Copymmmmmmmmmmmm.jpg);">
+            	<a href="./images/assets/IMG_0109 - Copymmmmmmmmmmmm.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Street</span>
-	              	<h2><a href="work-single.html">Street View, West Melbourne</a></h2>
+	              	<span>Melbourne</span>
+	              	<h2><a href="work-single.html">Street Lane</a></h2>
 	              </div>
               </div>
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/IMG_9236.jpg);">
-            	<a href="images/IMG_9236.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/assets/IMG_0117_mmmmmmmmmmmmmmmmmmmmmm.jpg);">
+            	<a href="images/assets/IMG_0117_mmmmmmmmmmmmmmmmmmmmmm.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Street</span>
-	              	<h2><a href="work-single.html">Skate Park</a></h2>
+	              	<span>Melbourne</span>
+	              	<h2><a href="work-single.html">Street Signs</a></h2>
 	              </div>
               </div>
             </div>
@@ -343,7 +343,7 @@ Whether it’s a fleeting glance or a city alley glowing at dusk, I chase the mo
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Oval</span>
+	              	<span>Melbourne</span>
 	              	<h2><a href="work-single.html">North Melbourne Recreation Centre</a></h2>
 	              </div>
               </div>
@@ -356,7 +356,7 @@ Whether it’s a fleeting glance or a city alley glowing at dusk, I chase the mo
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Street</span>
+	              	<span>Melbourne</span>
 	              	<h2><a href="work-single.html">Street Crossing</a></h2>
 	              </div>
               </div>
@@ -369,7 +369,7 @@ Whether it’s a fleeting glance or a city alley glowing at dusk, I chase the mo
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Steet</span>
+	              	<span>Melbourne</span>
 	              	<h2><a href="work-single.html">Fire Hydrant</a></h2>
 	              </div>
               </div>
